<resources>
    <string name="app_name">动漫库</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="homePage">首页</string>
    <string name="downloaded">离线缓存</string>
    <string name="myCollection">我的收藏</string>
    <string name="mySubscribe">我的关注</string>
    <string name="search_hint">请输入番名</string>
    <string name="search">搜索</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="userName">用户名</string>
    <string name="password">密码</string>
    <string name="about">关于</string>
    <string name="edit">编辑</string>
    <string name="collect">收藏</string>
    <string name="intro">简介</string>
    <string name="episodes">剧集</string>
    <string name="repassword">再次输入密码</string>
    <string name="submit">提交</string>
    <string name="userAvatar">用户头像</string>
    <string name="logout">注销登录</string>
    <string name="programmer">程序</string>
    <string name="programmerName">Tony</string>
    <string name="qa">测试</string>
    <string name="qaName">Anonymous</string>
    <string name="frameworkName">使用开源库</string>
    <string name="playerName">Vitamio</string>
    <string name="searchResult">搜索结果</string>
    <string name="fileName">文件名</string>
    <string name="more">更多</string>
</resources>
